~ dec 19 2025: naive approach, bufreader, allocations, 2m15s