@@ -3,4 +3,9 @@ name = "vroom"
 version = "0.1.0"
 edition = "2024"
 
+[profile.release]
+debug = true
+strip = false
+
 [dependencies]
+memmap2 = "0.9.9"
